# olymp

./: .clang-format  CMakeLists.txt  README.md
include/: chessboard.h  modulo_int.h
tests/: CMakeLists.txt  chessboard.cpp  modulo_int.cpp
