cmake_minimum_required(VERSION 3.0)
project(Olymp CXX)
option(WITH_TESTS "Enable tests" ON)
add_compile_options(-Wall -Wextra -Wpedantic -std=c++14)
include_directories(include)

if (${WITH_TESTS} STREQUAL "ON") 
    enable_testing()
    find_package(GTest REQUIRED)
    include_directories(${GTEST_INCLUDE_DIRS})
    add_subdirectory(tests)
endif()
